--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,24 +3,16 @@
 <head>
   <title>Header and Footer</title>
 </head>
-<body style="margin: 0; padding: 0;">
-  
-  <header style="color: #FF0000; height: 70px; width: 100%; position: fixed; top: 0; left: 0; background-color: #ffffff;">
-    <div style="height: 100%; display: flex; align-items: center; justify-content: center;">
-      <h1 style="margin: 0;">Header</h1>
-    </div>
+<body style="margin: 0; padding: 0; display: flex; flex-direction: column; min-height: 100vh;">
+
+  <header style="background-color: #FF0000; color: white; height: 70px; width: 100%; display: flex; align-items: center; justify-content: center;">
+    <h1 style="margin: 0;">Header</h1>
   </header>
-  
-  <main style="margin: 0; padding: 0; margin-top: 70px;"> <!-- Adjust margin-top based on the header height -->
-    <div style="height: calc(100vh - 130px); width: 100%; display: flex; justify-content: center; align-items: center;">
-      <h2 style="margin: 0;">Main Content</h2>
-    </div>
-  </main>
-  
-  <footer style="color: #00FF00; height: 60px; width: 100%; position: fixed; bottom: 0; left: 0; background-color: #ffffff;">
-    <div style="height: 100%; display: flex; align-items: center; justify-content: center;">
-      <h3 style="margin: 0;">Footer</h3>
-    </div>
+
+  <div style="flex: 1;"></div> <!-- Flexible space to push footer to the bottom -->
+
+  <footer style="background-color: #00FF00; color: white; height: 60px; width: 100%; display: flex; align-items: center; justify-content: center;">
+    <h2 style="margin: 0;">Footer</h2>
   </footer>
 
 </body>
