--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Header and Footer</title>
+    <title>Fake AirBnB</title>
 </head>
-<body style="margin: 0; padding: 0; display: flex; flex-direction: column; min-height: 100vh;">
-
-  <header style="background-color: #FF0000; color: white; height: 70px; width: 100%; display: flex; align-items: center; justify-content: center;">
-    <h1 style="margin: 0;">Header</h1>
-  </header>
-
-  <div style="flex: 1;"></div> <!-- Flexible space to push footer to the bottom -->
-
-  <footer style="background-color: #00FF00; color: white; height: 60px; width: 100%; display: flex; align-items: center; justify-content: center;">
-    <h2 style="margin: 0;">Footer</h2>
-  </footer>
+<body style="margin: 0; padding: 0;">
+  
+    <header style="height: 70px; width: 100%; position: fixed; top: 0; left: 0; background-color: #FF0000;">
+    </header>
+  
+  <footer style="Background-color:#00FF00; height:60px; width:100%; position: absolute; bottom:0; text-align:center; line-height:60px">
+            Best School
+        </footer>
 
 </body>
 </html>
