--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -22,19 +22,19 @@
                 <h3>States</h3>
                 <ul class="popover">
                     <li>
-                        <h2>State 1</h2>
+                        <h2>Egypt</h2>
                         <ul>
-                            <li>City 1</li>
-                            <li>City 2</li>
-                            <li>City 3</li>
+                            <li>Cairo</li>
+                            <li>Alexandria</li>
+                            <li>Port Said</li>
                         </ul>
                     </li>
                     <li>
-                        <h2>State 2</h2>
+                        <h2>Saudi Arabia</h2>
                         <ul>
-                            <li>City 1</li>
-                            <li>City 2</li>
-                            <li>City 3</li>
+                            <li>Riyadh</li>
+                            <li>Jeddah</li>
+                            <li>Meccah</li>
                         </ul>
                     </li>
                 </ul>
@@ -42,9 +42,9 @@
             <div class="amenities">
                 <h3>Amenities</h3>
                 <ul class="popover">
-                    <li>Fake Amenity 1</li>
-                    <li>Fake Amenity 2</li>
-                    <li>Fake Amenity 3</li>
+                    <li>Air Conditioner</li>
+                    <li>TV</li>
+                    <li>Balcony</li>
                 </ul>
             </div>
             <button class="search-button">Search</button>
